--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,8 @@
         <activity
             android:name=".MainActivity"
             android:configChanges="orientation|keyboardHidden"
-            android:launchMode="singleTask">
+            android:launchMode="singleTask" />
+
         <activity
             android:name=".web.WebViewActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
@@ -43,16 +44,12 @@
             </intent-filter>
 
         </activity>
-
         <activity
-            android:name=".MainActivity"
+            android:name=".login.LoginActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
+            android:launchMode="singleTop"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
-
-        <activity
-            android:name=".web.WebViewActivity"
-            android:configChanges="orientation|keyboardHidden" />
 
     </application>
 
