--- a/build.gradle
+++ b/build.gradle
@@ -4,14 +4,14 @@ buildscript {
     repositories {
         google()
         jcenter()
-        
+        mavenCentral()//greendao
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.1'
+        classpath 'com.android.tools.build:gradle:3.2.0'
 
         //butterknife
         classpath 'com.jakewharton:butterknife-gradle-plugin:10.0.0'
-
+        classpath 'org.greenrobot:greendao-gradle-plugin:3.2.2'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
