ARouter 每个Module 都需要依赖， 才可以编译期，去把path 添加到他的map中

--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.2.0'
+//        classpath "com.alibaba:arouter-register:1.0.2"
 
         //butterknife
         classpath 'com.jakewharton:butterknife-gradle-plugin:10.0.0'
