--- a/supportlibrary/build.gradle
+++ b/supportlibrary/build.gradle
@@ -44,8 +44,8 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.0.2'
 
-    api 'com.alibaba:arouter-api:1.4.1'
-    annotationProcessor 'com.alibaba:arouter-compiler:1.2.2'
+    api rootProject.ext.dependencies.arouter_api
+//    annotationProcessor rootProject.ext.dependencies.arouter_compiler
 
     implementation 'org.greenrobot:greendao:3.2.2'
 
