main 获取新闻列表接口 WebView 打开 重定向bug。 需要调试

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
             android:value="63FxZHuqYzJZhMgMxVb0tuCkEyrOzjfE" />
 
         <activity
-            android:name=".MainActivity"
+            android:name=".main.MainActivity"
             android:configChanges="orientation|keyboardHidden"
             android:launchMode="singleTask" />
 
