--- a/supportlibrary/build.gradle
+++ b/supportlibrary/build.gradle
@@ -42,10 +42,14 @@ greendao {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
 
     api rootProject.ext.dependencies.arouter_api
 //    annotationProcessor rootProject.ext.dependencies.arouter_compiler
+    //Glide
+    api rootProject.ext.dependencies.glide
+    // glide使用https
+    api rootProject.ext.dependencies.glide_https
 
     implementation 'org.greenrobot:greendao:3.2.2'
 
