--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,6 +54,11 @@
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
 
+        <provider
+            android:authorities="AutoInitBrowserProvider"
+            android:name=".web.AutoInitBrowserProvider"
+            android:exported="false" />
+        
     </application>
 
 </manifest>
