--- a/supportlibrary/build.gradle
+++ b/supportlibrary/build.gradle
@@ -1,14 +1,13 @@
 apply plugin: 'com.android.library'
-apply plugin: 'org.greenrobot.greendao'
 
 android {
     compileSdkVersion 28
-    buildToolsVersion "29.0.0"
+    buildToolsVersion "28.0.3"
 
 
     defaultConfig {
-        minSdkVersion 16
-        targetSdkVersion 28
+        minSdkVersion 21
+        targetSdkVersion rootProject.ext.android.targetSdkVersion
         versionCode 1
         versionName "1.0"
 
@@ -31,15 +30,6 @@ android {
 
 }
 
-greendao {
-    schemaVersion 1 //数据库版本号
-    daoPackage 'com.newchar.supportlibrary.db.dao'
-// 设置DaoMaster、DaoSession、Dao 包名
-    targetGenDir 'src/main/java'//设置DaoMaster、DaoSession、Dao目录,请注意，这里路径用.不要用/
-//    generateTests false //设置为true以自动生成单元测试。
-//    targetGenDirTests 'src/main/java' //应存储生成的单元测试的基本目录。默认为 src / androidTest / java。
-}
-
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.1.0'
@@ -50,8 +40,6 @@ dependencies {
     api rootProject.ext.dependencies.glide
     // glide使用https
     api rootProject.ext.dependencies.glide_https
-
-    implementation 'org.greenrobot:greendao:3.2.2'
 
 //    testImplementation 'junit:junit:4.12'
 //    androidTestImplementation 'androidx.test:runner:1.2.0'
