--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,6 @@
     package="com.newchar.devnews">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:name=".App"
@@ -19,6 +18,7 @@
         <meta-data
             android:name="oschina_key"
             android:value="cXe8oxW5SJSuT02qdmjh" />
+
         <meta-data
             android:name="oschina_private_key"
             android:value="63FxZHuqYzJZhMgMxVb0tuCkEyrOzjfE" />
@@ -47,13 +47,19 @@
             </intent-filter>
 
         </activity>
+
         <activity
             android:name=".login.LoginActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:launchMode="singleTop"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
-        <activity android:name=".post.detail.OSCPostDetailActivity" />
+
+        <activity
+            android:name=".post.detail.OSCPostDetailActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan" />
 
     </application>
 
