--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,14 +4,13 @@ apply plugin: 'kotlin-android-extensions'
 
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion rootProject.ext.android.compileSdkVersion
     defaultConfig {
         applicationId "com.newchar.devnews"
-        minSdkVersion 21
-        targetSdkVersion 28
-        versionCode 1
-        versionName "1.0"
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        minSdkVersion rootProject.ext.android.minSdkVersion
+        targetSdkVersion rootProject.ext.android.targetSdkVersion
+        versionCode rootProject.ext.android.versionCode
+        versionName rootProject.ext.android.versionName
         vectorDrawables.useSupportLibrary = true
 
         javaCompileOptions {
@@ -37,13 +36,17 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.google.code.gson:gson:2.8.5'
-    implementation 'com.squareup.okhttp3:okhttp:3.10.0'
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta7'
-    implementation 'com.google.android.material:material:1.1.0'
-    implementation 'com.google.android:flexbox:1.1.0'
+//    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation rootProject.ext.dependencies.retrofit_converter_gson
+    implementation rootProject.ext.dependencies.okhttp3
+    implementation rootProject.ext.dependencies.support_appcompat_v7
+    implementation rootProject.ext.dependencies.android_constraintlayout
+    implementation rootProject.ext.dependencies.support_design
+    implementation rootProject.ext.dependencies.flexbox_lib
+
+    implementation  'com.scwang.smart:refresh-layout-kernel:2.0.1'
+    implementation  'com.scwang.smart:refresh-header-classics:2.0.1'
+    implementation  'com.scwang.smart:refresh-footer-classics:2.0.1'
 
     api rootProject.ext.dependencies.arouter_api
     annotationProcessor rootProject.ext.dependencies.arouter_compiler
@@ -51,15 +54,12 @@ dependencies {
     api rootProject.ext.dependencies.butterknife
     annotationProcessor rootProject.ext.dependencies.butterknife_apt
 
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.2.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation project(path: ':supportlibrary')
-    implementation "androidx.core:core-ktx:1.3.0"
+    implementation "androidx.core:core-ktx:1.3.2"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation "com.airbnb.android:lottie:2.8.0"
+    implementation rootProject.ext.dependencies.android_lottie
     implementation project(path: ':browser')
-}
-repositories {
-    mavenCentral()
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.5'
+    implementation project(path: ':Annotation')
+    annotationProcessor project(path: ':Compiler')
 }
