--- a/config.gradle
+++ b/config.gradle
@@ -3,10 +3,10 @@ ext {
     android = [
             compileSdkVersion: 28,
             buildToolsVersion: "28.0.3",
-            minSdkVersion    : 16,
+            minSdkVersion    : 21,
             targetSdkVersion : 28,
             versionCode      : 1,
-            versionName      : "4.7.0",
+            versionName      : "0.0.1",
     ]
 
     // App dependencies version
@@ -20,7 +20,7 @@ ext {
             rxAndroid = "2.0.1",
             retrofit = "2.3.0",
 
-            okhttp = "3.7.0", // 之前3.5
+            okhttp = "3.10.0",
             glide = "3.7.0",
             arouter_api = "1.4.1",
             arouter_compiler = "1.2.2",
@@ -37,8 +37,8 @@ ext {
             butterknife_apt            : "com.jakewharton:butterknife-compiler:$rootProject.butterknifeVersion",
 
             support_recyclerview_v7    : "androidx.recyclerview:recyclerview:1.0.0",
-            support_appcompat_v7       : "androidx.appcompat:appcompat:1.0.2",
-            support_design             : "com.google.android.material:material:1.0.0",
+            support_appcompat_v7       : "androidx.appcompat:appcompat:1.2.0",
+            support_design             : "com.google.android.material:material:1.2.1",
 
             //rx
             rxandroid                  : "io.reactivex.rxjava2:rxandroid:$rootProject.rxAndroid",
@@ -62,7 +62,8 @@ ext {
             qq_weChat_lib              :'com.tencent.mm.opensdk:wechat-sdk-android-without-mta:5.1.4',
             //flexbox
             flexbox_lib                : "com.google.android:flexbox:1.1.0",
-            android_constraintlayout   : "androidx.constraintlayout:constraintlayout:1.1.3",
+            android_constraintlayout   : "androidx.constraintlayout:constraintlayout:2.0.2",
+            android_lottie             : "com.airbnb.android:lottie:2.8.0",
 
     ]
 }
