--- a/supportlibrary/build.gradle
+++ b/supportlibrary/build.gradle
@@ -1,15 +1,17 @@
 apply plugin: 'com.android.library'
 
-android {
-    compileSdkVersion 28
-    buildToolsVersion "28.0.3"
 
+def depend = rootProject.ext.dependencies
+
+android {
+    compileSdkVersion rootProject.ext.android.compileSdkVersion
+    buildToolsVersion rootProject.ext.android.buildToolsVersion
 
     defaultConfig {
-        minSdkVersion 21
+        minSdkVersion rootProject.ext.android.minSdkVersion
         targetSdkVersion rootProject.ext.android.targetSdkVersion
-        versionCode 1
-        versionName "1.0"
+        versionCode rootProject.ext.android.versionCode
+        versionName rootProject.ext.android.versionName
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
@@ -32,14 +34,14 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
 
-    api rootProject.ext.dependencies.arouter_api
+    api depend.arouter_api
 //    annotationProcessor rootProject.ext.dependencies.arouter_compiler
     //Glide
-    api rootProject.ext.dependencies.glide
+    api depend.glide
     // glide使用https
-    api rootProject.ext.dependencies.glide_https
+    api depend.glide_https
 
 //    testImplementation 'junit:junit:4.12'
 //    androidTestImplementation 'androidx.test:runner:1.2.0'
