--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,8 @@ dependencies {
 //    implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation rootProject.ext.dependencies.retrofit_converter_gson
     implementation rootProject.ext.dependencies.okhttp3
+    implementation rootProject.ext.dependencies.okhttp3_logging_interceptor
+
     implementation rootProject.ext.dependencies.support_appcompat_v7
     implementation rootProject.ext.dependencies.android_constraintlayout
     implementation rootProject.ext.dependencies.support_design
